--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:OQMI+7hK4/Zb5plBqspEpvfZIDqWTRDRSuocZrAU7cM=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -8,18 +8,18 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=comp586DB
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=
-REDIS_PASSWORD=
-REDIS_PORT=
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
